testing mobile overflow issue

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -96,7 +96,7 @@
     #ellipse {
         position: absolute;
         height:30%;
-        right:-6%;
+        right:0%;
         z-index: -1;
         top:-5%;
     }
